non-streaming voice

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <p id="response"></p>
   <button id="activate">Activate Microphone</button>
   <button id="send">Send Transcript</button>
+  <button id="appendText">Append Text</button>
   <script src="script.js"></script>
 </body>
 </html>
