--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <button id="send">Send Transcript</button>
   <button id="appendText">Append Text</button>
   <button id="clearTranscript">Clear Transcript</button>
+  <button id="stopSpeech">Stop Speech</button>
+  <button id="startSpeech">Start Speech</button>
 
   <p id="response"></p>
 
